--- a/.gitignore
+++ b/.gitignore
@@ -67,7 +67,6 @@ local.properties
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
-/src/main/java/util/PathUtil.java
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
@@ -211,3 +210,4 @@ testem.log
 .DS_Store
 
 # End of https://www.gitignore.io/api/java,maven,jboss,eclipse,intellij+iml
+src/main/java/util/PathUtil\.java
