--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,12 @@
 	<name>CoolDrive</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.1</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
