--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@
 				<artifactId>wildfly-maven-plugin</artifactId>
 				<version>1.2.0.Alpha6</version>
 				<configuration>
-					<hostname>127.0.0.1</hostname>
+					<hostname>redgyuf.servebeer.com</hostname>
 					<port>9990</port>
 					<username>admin</username>
 					<password>admin</password>
