ignored webstorms tslint json config

--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ testem.log
 .DS_Store
 
 # End of https://www.gitignore.io/api/java,maven,jboss,eclipse,intellij+iml
+
+src/angular/cooldrive/tslint\.json
