--- a/pom.xml
+++ b/pom.xml
@@ -109,18 +109,46 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.wildfly.plugins</groupId>
-				<artifactId>wildfly-maven-plugin</artifactId>
-				<version>1.2.0.Alpha6</version>
-				<configuration>
-					<hostname>localhost</hostname>
-					<port>9990</port>
-					<username>admin</username>
-					<password>admin</password>
-					<name>CoolDrive.war</name>
-				</configuration>
-			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>local</id>
+			<build>
+			<plugins>
+					<plugin>
+						<groupId>org.wildfly.plugins</groupId>
+						<artifactId>wildfly-maven-plugin</artifactId>
+						<version>1.2.0.Alpha6</version>
+						<configuration>
+							<hostname>localhost</hostname>
+							<port>9990</port>
+							<username>admin</username>
+							<password>admin</password>
+							<name>CoolDrive.war</name>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>redgyuf</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.wildfly.plugins</groupId>
+						<artifactId>wildfly-maven-plugin</artifactId>
+						<version>1.2.0.Alpha6</version>
+						<configuration>
+							<hostname>redgyuf.servebeer.com</hostname>
+							<port>9990</port>
+							<username>admin</username>
+							<password>admin</password>
+							<name>CoolDrive.war</name>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
