--- a/src/angular/cooldrive/package.json
+++ b/src/angular/cooldrive/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "enhanced-resolve": "^3.3.0",
     "jquery": "^3.2.1",
+    "ngx-contextmenu": "^1.3.5",
     "rxjs": "^5.1.0",
     "tether": "^1.4.0",
     "zone.js": "^0.8.4"
