--- a/src/angular/cooldrive/package.json
+++ b/src/angular/cooldrive/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/file-saver": "0.0.1",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "enhanced-resolve": "^3.3.0",
+    "file-saver": "^1.3.3",
     "jquery": "^3.2.1",
     "ngx-contextmenu": "^1.3.5",
     "rxjs": "^5.1.0",
